tdf#98599 SVG: consider attributes of 'defs' element

The element 'defs' is not rendered, but children of it may
inherit the attributes. Therefore these has to be considered.

Change-Id: Ic6c21645439731db63f22adf5a5a4e2af2b74b71
Reviewed-on: https://gerrit.libreoffice.org/23309
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>